image-preview-fix: added new class to main that will stop setting visibility of splash-* classes to invisible for animations when in preview mode. Converted landing page and layout to TS files.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,7 +63,7 @@
 .owl-dots > .owl-dot.active > span {
     background-color: #7b68ee !important;
 }
-/* visibility will be set by gsap after pageload */
-[class^="splash-"] {
+/* if not in preview mode, visibility will be set by gsap after pageload */
+main:not(.preview) [class^="splash-"] {
     visibility:hidden;
 } 
